# podslicer

./: .gitignore  Makefile  README.md  audio.py  pyproject.toml  test_audio.py
podslicer/: __main__.py  audio.py  cli.py  control.py  display.py  track.py
tests/: conftest.py  test.m4a  test_audio.py  test_audio_file.py  test_control.py  test_display.py  test_metadata.py  test_segment.py  test_track.py
